Add `use_extracted_data` option

--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -80,7 +80,7 @@
     "    \"SubductedQuantities\",\n",
     ")\n",
     "\n",
-    "output_dir = \"outputs\"\n",
+    "output_dir = \"extracted_data\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "subduction_data_filename = os.path.join(output_dir, \"subducting_plate_data.csv\")\n",
     "study_area_dir = os.path.join(output_dir, \"study_area_polygons\")\n",
