--- a/01-create_pu_classifier.ipynb
+++ b/01-create_pu_classifier.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If training data has been extracted from the source datasets by running the `00a-extract_training_data.ipynb` and `00b-extract_grid_data.ipynb` notebooks, set the `use_extracted_data` variable below to `True` to use this dataset instead of the pre-prepared training data from the [Zenodo repository](https://zenodo.org/record/8157691)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -64,8 +80,11 @@
    "outputs": [],
    "source": [
     "# Input/output files\n",
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir, verbose=True)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
     "output_dir = \"outputs\"\n",
