--- a/01b-cross_validation.ipynb
+++ b/01b-cross_validation.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -100,8 +109,11 @@
     }
    ],
    "source": [
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir, verbose=True)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "data = pd.read_csv(data_filename)\n",
     "\n",
