--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -60,8 +69,11 @@
     "classifier_filename = os.path.join(output_dir, \"pu_classifier.joblib\")\n",
     "classifier = load(classifier_filename)\n",
     "\n",
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir, verbose=True)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"grid_data.csv.zip\")\n",
     "point_data = pd.read_csv(data_filename)"
    ]
