--- a/Fig-01-02-probability_snapshots.ipynb
+++ b/Fig-01-02-probability_snapshots.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -56,8 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "model_dir = \"plate_model\"\n",
     "check_plate_model(model_dir)\n",
     "input_dir = os.path.join(\"outputs\", \"grids\")\n",
