--- a/Fig-06-performance.ipynb
+++ b/Fig-06-performance.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -76,8 +85,11 @@
    "outputs": [],
    "source": [
     "# Input/output files\n",
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "\n",
     "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "output_dir = os.path.join(\"outputs\", \"figures\")\n",
