--- a/01a-create_svm_classifier.ipynb
+++ b/01a-create_svm_classifier.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -41,8 +50,11 @@
    "outputs": [],
    "source": [
     "# Input/output files\n",
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir, verbose=True)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
     "output_dir = \"outputs\"\n",
