--- a/Fig-04-feature_importance.ipynb
+++ b/Fig-04-feature_importance.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -48,8 +57,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "training_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
     "classifier_filename = os.path.join(\"outputs\", \"pu_classifier.joblib\")\n",
