--- a/Fig-05-partial_dependence.ipynb
+++ b/Fig-05-partial_dependence.ipynb
@@ -14,6 +14,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_extracted_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -71,8 +80,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"prepared_data\"\n",
-    "check_prepared_data(data_dir)\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = \"prepared_data\"\n",
+    "    check_prepared_data(data_dir, verbose=True)\n",
     "input_dir = \"outputs\"\n",
     "output_dir = \"figures\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
