Update README and re-run notebooks

--- a/02a-create_probability_maps_svm.ipynb
+++ b/02a-create_probability_maps_svm.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Probability grids\n",
     "\n",
-    "This notebook creates the time-dependent probability maps and writes them to file (`.nc` format). The notebook `01-create_pu_classifier.ipynb` must have been run previously."
+    "This notebook creates the time-dependent probability maps for the SVM model and writes them to file (`.nc` format).\n",
+    "The notebook `01a-create_svm_classifier.ipynb` must have been run previously."
    ]
   },
   {
@@ -75,10 +76,10 @@
    "outputs": [],
    "source": [
     "output_dir = \"outputs\"\n",
-    "grid_output_dir = os.path.join(output_dir, \"grids\")\n",
+    "grid_output_dir = os.path.join(output_dir, \"grids_svm\")\n",
     "os.makedirs(grid_output_dir, exist_ok=True)\n",
     "\n",
-    "classifier_filename = os.path.join(output_dir, \"pu_classifier.joblib\")\n",
+    "classifier_filename = os.path.join(output_dir, \"svm_classifier.joblib\")\n",
     "classifier = load(classifier_filename)\n",
     "\n",
     "if use_extracted_data:\n",
@@ -106,7 +107,7 @@
    "source": [
     "probabilities_filename = os.path.join(\n",
     "    output_dir,\n",
-    "    \"grid_probabilities.csv.zip\",\n",
+    "    \"grid_probabilities_svm.csv.zip\",\n",
     ")\n",
     "\n",
     "probabilities = calculate_probabilities(\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
