Change output figure filenames

--- a/Fig-04-feature_importance.ipynb
+++ b/Fig-04-feature_importance.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +68,13 @@
     "\n",
     "output_dir = \"figures\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
+    "supplement_dir = \"supplementary_figures\"\n",
+    "os.makedirs(supplement_dir, exist_ok=True)\n",
     "\n",
     "classifier = load(classifier_filename)\n",
     "df_training = pd.read_csv(training_filename)\n",
-    "importances_basename = os.path.join(output_dir, \"feature_importances\")\n",
-    "boxplots_filename = os.path.join(output_dir, \"feature_boxplots\")"
+    "importances_basename = os.path.join(output_dir, \"Fig-04-feature_importances\")\n",
+    "boxplots_filename = os.path.join(supplement_dir, \"feature_boxplots\")"
    ]
   },
   {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +301,7 @@
        "magnetic_anomaly_mean (nT)                                       0.081363  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
