--- a/Fig-03-time_dependent_present_day_probabilities.ipynb
+++ b/Fig-03-time_dependent_present_day_probabilities.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "output_basename = os.path.join(output_dir, \"DR_comparison_NA\")\n",
+    "output_basename = os.path.join(output_dir, \"Fig-03a-DR_comparison_NA\")\n",
     "\n",
     "fig, axs = plt.subplots(\n",
     "    1, 2,\n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "output_basename = os.path.join(output_dir, \"DR_comparison_SA\")\n",
+    "output_basename = os.path.join(output_dir, \"Fig-03b-DR_comparison_SA\")\n",
     "\n",
     "fig, axs = plt.subplots(\n",
     "    1, 3,\n",
