--- a/Fig-05-partial_dependence.ipynb
+++ b/Fig-05-partial_dependence.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "\n",
     "training_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
-    "output_basename = os.path.join(output_dir, \"partial_dependence\")\n",
+    "output_basename = os.path.join(output_dir, \"Fig-05-partial_dependence\")\n",
     "\n",
     "classifier = load(classifier_filename)\n",
     "df_training = pd.read_csv(training_filename)"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
