--- a/01-create_pu_classifier.ipynb
+++ b/01-create_pu_classifier.ipynb
@@ -128,9 +128,12 @@
     "data = data[data[\"region\"].isin({\"NAm\", \"SAm\"})]\n",
     "\n",
     "# Equal number of positive and unlabelled samples\n",
-    "data = downsample_unlabelled(data, random_state=random_seed)\n",
+    "data_downsampled = downsample_unlabelled(\n",
+    "    data,\n",
+    "    random_state=random_seed,\n",
+    ")\n",
     "\n",
-    "print(data.groupby([\"region\", \"label\"]).size())"
+    "print(data_downsampled.groupby([\"region\", \"label\"]).size())"
    ]
   },
   {
@@ -148,7 +151,7 @@
    ],
    "source": [
     "# Extract relevant columns in NumPy array form\n",
-    "x, y = get_xy(data)\n",
+    "x, y = get_xy(data_downsampled)\n",
     "print(x.shape, y.shape)"
    ]
   },
@@ -263,6 +266,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train models for NA and SA only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Region: NAm\n",
+      "region  label     \n",
+      "NAm     positive      217\n",
+      "        unlabelled    217\n",
+      "dtype: int64\n",
+      "\n",
+      "Region: SAm\n",
+      "region  label     \n",
+      "SAm     positive      130\n",
+      "        unlabelled    130\n",
+      "dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data_na = data[data[\"region\"] == \"NAm\"]\n",
+    "for region, subset in data.groupby(\"region\"):\n",
+    "    print(f\"Region: {region}\")\n",
+    "    output_subset = os.path.join(\n",
+    "        output_dir,\n",
+    "        f\"pu_classifier_{region[:2]}.joblib\",\n",
+    "    )\n",
+    "\n",
+    "    subset = downsample_unlabelled(\n",
+    "        subset,\n",
+    "        random_state=random_seed,\n",
+    "    )\n",
+    "    print(subset.groupby([\"region\", \"label\"]).size())\n",
+    "\n",
+    "    x, y = get_xy(subset)\n",
+    "    base_model = clone(BASE_MODELS[\"randomforest\"])\n",
+    "    base_model.set_params(random_state=random_seed)\n",
+    "\n",
+    "    pu_model = BaggingPuClassifier(\n",
+    "        base_estimator=base_model,\n",
+    "        n_jobs=n_jobs,\n",
+    "        random_state=random_seed,\n",
+    "        n_estimators=250,\n",
+    "        max_samples=1.0,\n",
+    "    )\n",
+    "    pu_model.fit(x, y)\n",
+    "    dump(pu_model, output_subset)\n",
+    "\n",
+    "    print(\"\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -286,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
