Move format_feature_name to misc.py

--- a/Fig-04-feature_importance.ipynb
+++ b/Fig-04-feature_importance.ipynb
@@ -41,7 +41,7 @@
     "    plot_correlations,\n",
     "    plot_importances,\n",
     ")\n",
-    "from lib.format_feature_names import format_feature_name\n",
+    "from lib.misc import format_feature_name\n",
     "from lib.pu import (\n",
     "    COLUMNS_TO_DROP,\n",
     "    CORRELATED_COLUMNS,\n",
