Remove Fig. 3, re-run notebooks

--- a/02b-present_day_probabilities.ipynb
+++ b/02b-present_day_probabilities.ipynb
@@ -64,7 +64,7 @@
     "model_dir = \"plate_model\"\n",
     "check_plate_model(model_dir)\n",
     "\n",
-    "output_dir = os.path.join(\"figures\")\n",
+    "output_dir = os.path.join(\"supplementary_figures\")\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "input_filename = os.path.join(\"outputs\", \"grid_probabilities.csv.zip\")\n",
