--- a/01-create_pu_classifier.ipynb
+++ b/01-create_pu_classifier.ipynb
@@ -50,6 +50,7 @@
     "from lib.check_files import check_prepared_data\n",
     "from lib.pu import (\n",
     "    BASE_MODELS,\n",
+    "    PU_PARAMS,\n",
     "    downsample_unlabelled,\n",
     "    get_xy,\n",
     ")\n",
@@ -70,7 +71,14 @@
     "random_seed = 1234\n",
     "\n",
     "# Number of jobs used to train model\n",
-    "n_jobs = 4"
+    "n_jobs = 4\n",
+    "\n",
+    "rf_params = {\"random_state\": random_seed}\n",
+    "pu_params = {\n",
+    "    \"n_jobs\": n_jobs,\n",
+    "    \"random_state\": random_seed,\n",
+    "    **PU_PARAMS\n",
+    "}"
    ]
   },
   {
@@ -172,6 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Base random forest model:\n",
       "{'bootstrap': True,\n",
       " 'ccp_alpha': 0.0,\n",
       " 'class_weight': None,\n",
@@ -184,7 +193,7 @@
       " 'min_samples_leaf': 1,\n",
       " 'min_samples_split': 2,\n",
       " 'min_weight_fraction_leaf': 0.0,\n",
-      " 'n_estimators': 100,\n",
+      " 'n_estimators': 50,\n",
       " 'n_jobs': 1,\n",
       " 'oob_score': False,\n",
       " 'random_state': 1234,\n",
@@ -196,7 +205,8 @@
    "source": [
     "# Use a random forest as the base classifier\n",
     "base_model = clone(BASE_MODELS[\"randomforest\"])\n",
-    "base_model.set_params(random_state=random_seed)\n",
+    "base_model.set_params(**rf_params)\n",
+    "print(\"Base random forest model:\")\n",
     "pprint.pprint(base_model.get_params())"
    ]
   },
@@ -206,35 +216,48 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>BaggingPuClassifier(base_estimator=RandomForestClassifier(n_jobs=1,\n",
-       "                                                          random_state=1234),\n",
-       "                    n_estimators=250, n_jobs=4, random_state=1234)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">BaggingPuClassifier</label><div class=\"sk-toggleable__content\"><pre>BaggingPuClassifier(base_estimator=RandomForestClassifier(n_jobs=1,\n",
-       "                                                          random_state=1234),\n",
-       "                    n_estimators=250, n_jobs=4, random_state=1234)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">base_estimator: RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_jobs=1, random_state=1234)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_jobs=1, random_state=1234)</pre></div></div></div></div></div></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "BaggingPuClassifier(base_estimator=RandomForestClassifier(n_jobs=1,\n",
-       "                                                          random_state=1234),\n",
-       "                    n_estimators=250, n_jobs=4, random_state=1234)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PU model:\n",
+      "{'base_estimator': RandomForestClassifier(n_estimators=50, n_jobs=1, random_state=1234),\n",
+      " 'base_estimator__bootstrap': True,\n",
+      " 'base_estimator__ccp_alpha': 0.0,\n",
+      " 'base_estimator__class_weight': None,\n",
+      " 'base_estimator__criterion': 'gini',\n",
+      " 'base_estimator__max_depth': None,\n",
+      " 'base_estimator__max_features': 'sqrt',\n",
+      " 'base_estimator__max_leaf_nodes': None,\n",
+      " 'base_estimator__max_samples': None,\n",
+      " 'base_estimator__min_impurity_decrease': 0.0,\n",
+      " 'base_estimator__min_samples_leaf': 1,\n",
+      " 'base_estimator__min_samples_split': 2,\n",
+      " 'base_estimator__min_weight_fraction_leaf': 0.0,\n",
+      " 'base_estimator__n_estimators': 50,\n",
+      " 'base_estimator__n_jobs': 1,\n",
+      " 'base_estimator__oob_score': False,\n",
+      " 'base_estimator__random_state': 1234,\n",
+      " 'base_estimator__verbose': 0,\n",
+      " 'base_estimator__warm_start': False,\n",
+      " 'bootstrap': True,\n",
+      " 'bootstrap_features': False,\n",
+      " 'max_features': 1.0,\n",
+      " 'max_samples': 1.0,\n",
+      " 'n_estimators': 100,\n",
+      " 'n_jobs': 4,\n",
+      " 'oob_score': True,\n",
+      " 'random_state': 1234,\n",
+      " 'verbose': 0,\n",
+      " 'warm_start': False}\n"
+     ]
     }
    ],
    "source": [
     "# Train the PU classifier\n",
-    "pu_model = BaggingPuClassifier(\n",
-    "    base_estimator=base_model,\n",
-    "    n_jobs=n_jobs,\n",
-    "    random_state=random_seed,\n",
-    "    n_estimators=250,\n",
-    "    max_samples=1.0,\n",
-    ")\n",
-    "pu_model.fit(x, y)"
+    "pu_model = BaggingPuClassifier(base_estimator=base_model, **pu_params)\n",
+    "print(\"PU model:\")\n",
+    "pprint.pprint(pu_model.get_params())\n",
+    "pu_model = pu_model.fit(x, y)"
    ]
   },
   {
@@ -299,6 +322,7 @@
    "source": [
     "# data_na = data[data[\"region\"] == \"NAm\"]\n",
     "for region, subset in data.groupby(\"region\"):\n",
+    "    region = str(region)\n",
     "    print(f\"Region: {region}\")\n",
     "    output_subset = os.path.join(\n",
     "        output_dir,\n",
@@ -313,16 +337,10 @@
     "\n",
     "    x, y = get_xy(subset)\n",
     "    base_model = clone(BASE_MODELS[\"randomforest\"])\n",
-    "    base_model.set_params(random_state=random_seed)\n",
+    "    base_model.set_params(**rf_params)\n",
     "\n",
-    "    pu_model = BaggingPuClassifier(\n",
-    "        base_estimator=base_model,\n",
-    "        n_jobs=n_jobs,\n",
-    "        random_state=random_seed,\n",
-    "        n_estimators=250,\n",
-    "        max_samples=1.0,\n",
-    "    )\n",
-    "    pu_model.fit(x, y)\n",
+    "    pu_model = BaggingPuClassifier(base_estimator=base_model, **pu_params)\n",
+    "    pu_model = pu_model.fit(x, y)\n",
     "    dump(pu_model, output_subset)\n",
     "\n",
     "    print(\"\")"
