Update create_grids function

--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "create_probability_grids(\n",
-    "    probabilities=probabilities,\n",
+    "    data=probabilities,\n",
     "    output_dir=grid_output_dir,\n",
     "    threads=n_jobs,\n",
     "    extent=(-180, 180, -90, 90),\n",
